# react-native-persistent-background-location

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ZERO-TO-DEPLOY.md  nitro.json  package-lock.json  package.json  react-native-persistent-background-location.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
android/: CMakeLists.txt  build.gradle  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/margelo/nitro/persistentbackgroundlocation/: ActivityRecognitionHelper.kt  ActivityRecognitionReceiver.kt  AppContextHolder.kt  BackgroundLocationService.kt  BatteryHelper.kt  BootBroadcastReceiver.kt  Constants.kt  FusedLocationEngine.kt  HybridPersistentBackgroundLocation.kt  LocationBufferStore.kt  LocationConfig.kt  LocationContextProvider.kt  LocationEngine.kt  LocationEventBus.kt  LocationFixModel.kt  LocationSyncer.kt  MotionGate.kt  NotificationFactory.kt  PermissionHelper.kt  PlatformLocationEngine.kt  SyncResult.kt
example/: App.tsx  app.json  metro.config.js  package.json
ios/: HybridPersistentBackgroundLocation.swift  LaunchHook.swift  LocationBufferStore.swift  LocationConfig.swift  LocationController.swift  LocationFixModel.swift  LocationPermissions.swift  LocationSyncer.swift  OneShotLocation.swift  PBLConstants.swift  PBLLaunchObserver.mm
plugin/: tsconfig.json
src/: index.ts  types.ts
(+6 files in other folders)
